# r2n

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_CN.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/supernode/: Cargo.toml
apps/supernode/src/: main.rs
crates/r2n-cli/: Cargo.toml
crates/r2n-cli/src/: lib.rs
crates/r2n-common/: Cargo.toml
crates/r2n-common/src/: lib.rs
crates/r2n-config/: Cargo.toml
crates/r2n-config/src/: lib.rs
crates/r2n-crypto/: Cargo.toml
crates/r2n-crypto/src/: lib.rs
crates/r2n-daemon/: Cargo.toml
crates/r2n-dataplane/: Cargo.toml
crates/r2n-dataplane/src/: defense.rs  lib.rs  path.rs
crates/r2n-discovery/: Cargo.toml
crates/r2n-discovery/src/: lib.rs
crates/r2n-edge-lib/: Cargo.toml
crates/r2n-edge-lib/src/: ipc.rs  lib.rs
crates/r2n-nat/: Cargo.toml
crates/r2n-nat/src/: lib.rs  port_mapping.rs
crates/r2n-observability/: Cargo.toml
crates/r2n-observability/src/: lib.rs
crates/r2n-policy/: Cargo.toml
crates/r2n-policy/src/: lib.rs
crates/r2n-proto/: Cargo.toml
crates/r2n-proto/src/: lib.rs
crates/r2n-qos/: Cargo.toml
crates/r2n-qos/src/: lib.rs
crates/r2n-rendezvous/: Cargo.toml
crates/r2n-rendezvous/src/: lib.rs
crates/r2n-room/: Cargo.toml
crates/r2n-room/src/: lib.rs
crates/r2n-route/: Cargo.toml
crates/r2n-route/src/: lib.rs
crates/r2n-slab/: Cargo.toml
crates/r2n-slab/src/: lib.rs
crates/r2n-supernode-lib/: Cargo.toml
crates/r2n-supernode-lib/src/: lib.rs
crates/r2n-tests/: Cargo.toml
crates/r2n-transport/: Cargo.toml
crates/r2n-transport/src/: lib.rs
crates/r2n-tun/: Cargo.toml
crates/r2n-tun/src/: lib.rs
