[package]
name = "r2n-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
snow = "0.9"
chacha20poly1305 = "0.10"
tokio = { version = "1.0", features = ["sync"] }
rand = "0.8"
thiserror = "1.0"
log = "0.4"
r2n-common = { path = "../r2n-common" }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
