[package]
name = "r2n-nat"
version = "0.1.0"
edition = "2024"

[dependencies]
r2n-common = { path = "../r2n-common" }
r2n-proto = { path = "../r2n-proto" }
r2n-transport = { path = "../r2n-transport" }
anyhow = "1.0"
default-net = "0.22"
igd-next = { version = "0.17", features = ["aio_tokio"] }
futures-util = "0.3"
log = "0.4"
natpmp = "0.5"
pcp-client = "0.1"
serde = { version = "1.0", features = ["derive"] }
stun-rs = "0.1"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
if-addrs = "0.13"
