[package]
name = "r2n-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
r2n-common = { path = "../r2n-common" }
r2n-proto = { path = "../r2n-proto" }
r2n-transport = { path = "../r2n-transport" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.0"
