[package]
name = "r2n-supernode-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
r2n-common = { path = "../r2n-common" }
r2n-config = { path = "../r2n-config" }
r2n-proto = { path = "../r2n-proto" }
r2n-transport = { path = "../r2n-transport" }
r2n-room = { path = "../r2n-room" }
r2n-slab = { path = "../r2n-slab" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
thiserror = "1.0"
dashmap = "5.0"
anyhow = "1.0"
rand = "0.8"
ed25519-dalek = "2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnet = "2.3"
